bug fix, on iphone have to click 2 times to navigate to profile link

--- a/assets/stylesheets/new_styles/utilities/_placeholders.scss
+++ b/assets/stylesheets/new_styles/utilities/_placeholders.scss
@@ -31,5 +31,9 @@
     position: absolute;
     top: -8px;
     width: 100%;
+
+    @include media($mobile) {
+      content: none;
+    }
   }
 }
